Fixed CSS to avoid content "jumping"

--- a/components/Calculator.module.css
+++ b/components/Calculator.module.css
@@ -1,3 +1,17 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .input {
   border: 1px solid black;
+}
+
+.result {
+  height: 30px;
+}
+
+.result {
+  height: 30px;
 }
